Remove internal proprietary API calls